# memcpy-amd64

./: .gitmodules  CMakeLists.txt  README.md  memcpy.cpp  memcpy.hpp
bench/: benchmark.cpp
fuzz/: CMakeLists.txt  fuzz_memcpy.cpp  fuzz_sse_loop.cpp  fuzz_ssse3_loop.cpp
include/memcpy-amd64/: memcpy.h.in  memcpy.hpp
src/: memcpy.cpp
test/: test.cpp  test_basic.cpp
